results/SVCOMP/2-shot/log-boundcheck100-2024_03_18_23_58_11.txt
public class boundcheck100 {

    //@ requires i >= 0;
    private static void recursion(int i) {
        //@ maintaining i >= 0;
        //@ decreasing i;
        if (i == 0) {
            return;
        }
        if (i > 0) {
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:5: error: Loop specifications must immediately precede a loop statement
        //@ maintaining i >= 0;
            ^
1 error

